--- a/_sass/_settings.scss
+++ b/_sass/_settings.scss
@@ -2,14 +2,14 @@
 $backgroundColour: #ffffff !default;
 $codeBackgroundColour: #fafafa !default;
 $featureBackgroundColour: #f9fafa !default;
-$accentColour: #05bf85 !default;
+$accentColour: #6899a8 !default;
 
 // Text colours
 $headingColour: #242e2b !default;
 $bodyColour: #384743 !default;
-$linkColour: #05bf85 !default;
-$hoverColour: #008000 !default;
-$focusColour: #fa407a !default;
+$linkColour: #6899a8 !default;
+$hoverColour: #587a86 !default;
+$focusColour: white !default;
 $captionColour: #a8adac !default;
 $white: #ffffff !default;
 
@@ -19,20 +19,20 @@ $bodytype: (
   regular: 400,
   bold: 700,
   italic: italic,
-  cap-height: 0.75
+  cap-height: 0.75,
 ) !default;
 
 $headingtype: (
   font-family: '"Merriweather", serif',
   regular: 400,
   bold: 700,
-  cap-height: 0.75
+  cap-height: 0.75,
 ) !default;
 
 $monospacetype: (
   font-family: "Menlo, monospace",
   regular: 400,
-  cap-height: 0.68
+  cap-height: 0.68,
 ) !default;
 
 // TIP: Load custom fonts in _config.yaml
